--- a/index.html
+++ b/index.html
@@ -455,24 +455,24 @@
         </div>
 
         <div class="menu-categories">
-            <button class="category-btn active" data-cat="all">Всё</button>
-            <button class="category-btn" data-cat="завтраки">Завтраки</button>
-            <button class="category-btn" data-cat="салаты">Салаты</button>
-            <button class="category-btn" data-cat="супы">Супы</button>
-            <button class="category-btn" data-cat="горячие">Горячие блюда</button>
-            <button class="category-btn" data-cat="паста">Паста</button>
-            <button class="category-btn" data-cat="стейки">Стейки</button>
-            <button class="category-btn" data-cat="пицца">Пицца</button>
-            <button class="category-btn" data-cat="закуски">Закуски</button>
-            <button class="category-btn" data-cat="фастфуд">Фастфуд</button>
-            <button class="category-btn" data-cat="компания">На компанию</button>
-            <button class="category-btn" data-cat="напитки">Напитки</button>
+            <button class="category-btn active" data-cat="Всё">Всё</button>
+            <button class="category-btn" data-cat="Завтраки">Завтраки</button>
+            <button class="category-btn" data-cat="Салаты">Салаты</button>
+            <button class="category-btn" data-cat="Супы">Супы</button>
+            <button class="category-btn" data-cat="Горячие блюда">Горячие блюда</button>
+            <button class="category-btn" data-cat="Паста">Паста</button>
+            <button class="category-btn" data-cat="Стейки">Стейки</button>
+            <button class="category-btn" data-cat="Пицца">Пицца</button>
+            <button class="category-btn" data-cat="Закуски">Закуски</button>
+            <button class="category-btn" data-cat="Фастфуд">Фастфуд</button>
+            <button class="category-btn" data-cat="На компанию">На компанию</button>
+            <button class="category-btn" data-cat="Напитки">Напитки</button>
         </div>
 
         <div id="menuContent">
 
             <!-- ЗАВТРАКИ -->
-            <div class="menu-block" data-section="завтраки">
+            <div class="menu-block" data-section="Завтраки">
                 <div class="menu-block-title">Завтраки</div>
                 <div class="menu-list menu-cols">
                     <div class="menu-item">
@@ -532,7 +532,7 @@
             </div>
 
             <!-- САЛАТЫ -->
-            <div class="menu-block" data-section="салаты">
+            <div class="menu-block" data-section="Салаты">
                 <div class="menu-block-title">Салаты</div>
                 <div class="menu-list menu-cols">
                     <div class="menu-item">
@@ -575,7 +575,7 @@
             </div>
 
             <!-- СУПЫ -->
-            <div class="menu-block" data-section="супы">
+            <div class="menu-block" data-section="Супы">
                 <div class="menu-block-title">Супы</div>
                 <div class="menu-list menu-cols">
                     <div class="menu-item">
@@ -618,7 +618,7 @@
             </div>
 
             <!-- ГОРЯЧИЕ БЛЮДА -->
-            <div class="menu-block" data-section="горячие">
+            <div class="menu-block" data-section="Горячие блюда">
                 <div class="menu-block-title">Горячие блюда</div>
                 <div class="menu-list menu-cols">
                     <div class="menu-item">
@@ -708,7 +708,7 @@
             </div>
 
             <!-- ПАСТА -->
-            <div class="menu-block" data-section="паста">
+            <div class="menu-block" data-section="Паста">
                 <div class="menu-block-title">Паста</div>
                 <div class="menu-list menu-cols">
                     <div class="menu-item">
@@ -739,7 +739,7 @@
             </div>
 
             <!-- СТЕЙКИ -->
-            <div class="menu-block" data-section="стейки">
+            <div class="menu-block" data-section="Стейки">
                 <div class="menu-block-title">Стейки</div>
                 <div class="menu-list menu-cols">
                     <div class="menu-item">
@@ -770,7 +770,7 @@
             </div>
 
             <!-- ПИЦЦА -->
-            <div class="menu-block" data-section="пицца">
+            <div class="menu-block" data-section="Пицца">
                 <div class="menu-block-title">Пицца</div>
                 <div class="menu-list menu-cols">
                     <div class="menu-item"><div class="menu-item-left"><div class="menu-item-name">Маргарита</div></div><div class="menu-item-price">3 190 ₸</div></div>
@@ -785,7 +785,7 @@
             </div>
 
             <!-- ЗАКУСКИ -->
-            <div class="menu-block" data-section="закуски">
+            <div class="menu-block" data-section="Закуски">
                 <div class="menu-block-title">Закуски</div>
                 <div class="menu-list menu-cols">
                     <div class="menu-item"><div class="menu-item-left"><div class="menu-item-name">Сырные палочки</div></div><div class="menu-item-price">2 790 ₸</div></div>
@@ -801,7 +801,7 @@
             </div>
 
             <!-- ФАСТФУД -->
-            <div class="menu-block" data-section="фастфуд">
+            <div class="menu-block" data-section="Фастфуд">
                 <div class="menu-block-title">Фастфуд</div>
                 <div class="menu-list menu-cols">
                     <div class="menu-item"><div class="menu-item-left"><div class="menu-item-name">Бургер с говядиной</div></div><div class="menu-item-price">3 390 ₸</div></div>
@@ -812,7 +812,7 @@
             </div>
 
             <!-- БЛЮДА НА КОМПАНИЮ -->
-            <div class="menu-block" data-section="компания">
+            <div class="menu-block" data-section="На компанию">
                 <div class="menu-block-title">Блюда на компанию</div>
                 <div class="menu-list">
                     <div class="menu-item company">
@@ -835,7 +835,7 @@
             </div>
 
             <!-- НАПИТКИ (BAR MENU) -->
-            <div class="menu-block" data-section="напитки">
+            <div class="menu-block" data-section="Напитки">
                 <div class="menu-block-title">Кофе</div>
                 <div class="menu-list menu-cols">
                     <div class="menu-item"><div class="menu-item-left"><div class="menu-item-name">Эспрессо</div></div><div class="menu-item-price">1 090 ₸</div></div>
